--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
 		}
 
 		.author {
-			font-size: 52px;
+			font-size: 32px;
 			margin-bottom: 40px;
+		}
+
+		.by {
+			font-size: 22px;
+			margin-bottom: 20px;
 		}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="content">
-			<div class="title">Elemental API.</div>
-			<p class="author">Sarawut Popadcha</p>
+			<div class="title">Elemental API</div>
+			<div class="by">by</div>
+			<div class="author">Sarawut Popadcha</div>
 		</div>
 	</div>
 </body>
